--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "deputy",
+  "name": "reactapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "An example react app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel ./src/index.html",
+    "build": "parcel build ./src/index.html"
   },
-  "author": "",
+  "author": "Alex Shepherd",
   "license": "ISC",
-  "dependencies": {
-    "parcel-bundler": "^1.12.4"
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "parcel-bundler": "^1.12.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "tailwindcss": "^1.1.4"
+  },
+  "alias": {
+    "store": "./src/store/index.js"
   }
 }
