--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "author": "Alex Shepherd",
   "license": "ISC",
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^1.3.0",
-    "parcel-bundler": "^1.12.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "tailwindcss": "^1.1.4"
+    "parcel-bundler": "^1.12.4"
   },
   "alias": {
     "store": "./src/store/index.js"
+  },
+  "dependencies": {
+    "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@thefrontend/contextstore": "^1.0.3",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "tailwindcss": "^1.2.0"
   }
 }
